force-app/main/default/objects/Zentom_Runbook__mdt/Zentom_Runbook__mdt.object-meta.xml
<CustomObject>
    <description>Metadata-driven operational runbooks for SentinelFlow recommendations.</description>
    <label>Zentom Runbook</label>
    <pluralLabel>Zentom Runbooks</pluralLabel>
</CustomObject>