force-app/main/default/objects/Zentom_Runbook__mdt/fields/Default_Action__c.field-meta.xml
<CustomField>
    <fullName>Default_Action__c</fullName>
    <label>Default Action</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>