force-app/main/default/objects/Zentom_Runbook__mdt/fields/Requires_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Approval__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Requires Approval</label>
    <type>Checkbox</type>
</CustomField>