force-app/main/default/objects/Zentom_Runbook__mdt/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <label>Risk Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>