force-app/main/default/objects/Zentom_Runbook__mdt/fields/Step_2__c.field-meta.xml
<CustomField>
    <fullName>Step_2__c</fullName>
    <label>Step 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>